# ml_control_sem3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ClangBuildAnalyzer.ini  LICENSE.txt  README.md  ml_control_sem3.7z
cmake/: apply_options.cmake  declare_options.cmake  get_boost_lib.cmake
example/: confi_maze.ini  config.ini
src/: CMakeLists.txt  allocator.h  evolution-optimization.h  function-approximation.h  functional.h  global.cpp  global.h  gradient-descent.h  gray-code.h  gray_code.h  lbr-iiwa-forward-kinematics.h  main-kuka.cpp  main-window.cpp  main-window.h  main.cpp  matplotlibcpp.h  model.h  optimize-model.cpp  optimize-model.h  options.cpp  options.h  parse-function.h  particle-sworm.h  plot_from_txt.py  pontryagin-method.h  runge-kutte.h  runge_kutte.cpp  runge_kutte.h  static-tensor.h  tensor.h  two-wheel-robot.h  two_wheel_robot.h  utils.h  window.ui
src/lbr-iiwa/: TODO.md  distances.h  gateway-transmission.h  lbr-iiwa-forward-kinematics.h  lbr-iiwa-functional.h  optimize-kuka-robot.cpp  optimize-kuka-robot.h  point-segment-distance.h  safe-separation.h  segment-segment-distance.h  types.h
src/todo/: pontryagin-method.h
src/todo-long-term/: gradient-descent.h  trash_from_main
src/two-wheel-robot/: functional-wheel-robot.h  optimize-wheel-robot.cpp  optimize-wheel-robot.h  two-wheel-robot.h
test/: CMakeLists.txt  test_piecewise_linear_approx.cpp
